basic HTML layout made

--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,26 @@
 
 <body class="">
 
-	BODY
+	<header>
+		<section>
+			HEADER
+		</section>	
+	</header>
+	
+	<main>
+		<section>
+			MAIN
+		</section>		
+	</main>
+
+	<footer>
+		<section>		
+			FOOTER
+		</section>		
+	</footer>
+	
+	
+	
 
 	<script
 		src="https://code.jquery.com/jquery-3.6.4.min.js"
