--- a/index.htm
+++ b/index.htm
@@ -11,8 +11,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">			
 <link rel="stylesheet" type="text/css" href="./css/default.css">
-<style>
 <!-- CUSTOM CSS FOR THIS PAGE -->
+<style>
 		
 </style>
 </head>
@@ -27,7 +27,19 @@
 	
 	<main>
 		<section>
-			MAIN
+			<h1>BRANCHES</h1>
+
+			<ol>
+				<li><b>main</b><br />
+					the latest of everything
+				</li>				
+				<li><b>starter1</b><br />
+					simple HTML and CSS, no JS
+				</li>
+				<li><b>footer1</b><br />
+					footer
+				</li>				
+			</ol>
 		</section>		
 	</main>
 
