--- a/index.htm
+++ b/index.htm
@@ -45,7 +45,33 @@
 
 	<footer>
 		<section>		
-			FOOTER
+			
+			<div class="grid">
+				<div class="medium">
+					<h3>Read My Stories On Medium</h3>
+					<nobr>You can read my articles by checking out</nobr>
+					<nobr><a href="" target="_blank">medium.com/@mattgwriter7</a></nobr><br />
+					<span class="small">(I rattle on about astronomy, cats, IT, and much more...)</span>
+				</div>		
+				<div class="medium">
+					<h3>See My Repos On Github</h3>
+					<nobr>Lots of code, including this very site, is at: </nobr>
+					<nobr><a href="" target="_blank">github.com/mattgwriter7</a></nobr><br />
+					<span class="small">(Feel free to View Source right here, too)</span>
+				</div>
+				<div class="medium">
+					<h3>Get To Know Me On Reddit</h3>
+					<nobr>I am an active poster with this account: </nobr>
+					<nobr><a href="" target="_blank">reddit.com/user/mattgwriter7</a></nobr><br />
+					<span class="small">(Favorite topics: Astronomy, Flutter, Keto diet, and tons more!)</span>	
+				</div>								
+			</div>				
+
+			<div class="contact">
+				<nobr><span class="material-icons mail">&#xe158;</span>matt.garvin.***@gmail.com</nobr> 
+				<nobr><span class="material-icons phone">&#xe0b0;</span>***-556-9393</nobr>
+			</div>
+			
 		</section>		
 	</footer>
 	
