finished first pass of the footer

--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">			
-<link rel="stylesheet" type="text/css" href="./css/default.css">
+<link rel="stylesheet" type="text/css" href="./css/default.css?t=7">
 <!-- CUSTOM CSS FOR THIS PAGE -->
 <style>
 		
@@ -36,8 +36,8 @@
 				<li><b>starter1</b><br />
 					simple HTML and CSS, no JS
 				</li>
-				<li><b>footer1</b><br />
-					footer
+				<li><b>footer</b><br />
+					the footer (see "Footer" in "NOTES.md")
 				</li>				
 			</ol>
 		</section>		
@@ -49,26 +49,34 @@
 			<div class="grid">
 				<div class="medium">
 					<h3>Read My Stories On Medium</h3>
-					<nobr>You can read my articles by checking out</nobr>
-					<nobr><a href="" target="_blank">medium.com/@mattgwriter7</a></nobr><br />
-					<span class="small">(I rattle on about astronomy, cats, IT, and much more...)</span>
+					<nobr>I love to write!</nobr><br />
+					<nobr class="offsite_icon"><a href="https://medium.com/@mattgwriter7" target="_blank">medium.com/@mattgwriter7</a><span class="material-icons">&#xe89e;</span></nobr><br />
+					<div class="note">I rattle on about all sorts of stuff</div>
 				</div>		
-				<div class="medium">
-					<h3>See My Repos On Github</h3>
-					<nobr>Lots of code, including this very site, is at: </nobr>
-					<nobr><a href="" target="_blank">github.com/mattgwriter7</a></nobr><br />
-					<span class="small">(Feel free to View Source right here, too)</span>
-				</div>
-				<div class="medium">
+				<div class="reddit">
 					<h3>Get To Know Me On Reddit</h3>
-					<nobr>I am an active poster with this account: </nobr>
-					<nobr><a href="" target="_blank">reddit.com/user/mattgwriter7</a></nobr><br />
-					<span class="small">(Favorite topics: Astronomy, Flutter, Keto diet, and tons more!)</span>	
-				</div>								
+					<nobr>I am an active poster there:</nobr><br />
+					<nobr class="offsite_icon"><a href="https://reddit.com/user/mattgwriter7" target="_blank">reddit.com/user/mattgwriter7</a><span class="material-icons">&#xe89e;</span></nobr><br />
+					<div class="note">Fave topics: Astronomy, Flutter, the Keto diet, and tons more</div>	
+				</div>	
+				<div class="github">
+					<h3>Github</h3>
+					<nobr class="offsite_icon"><a href="https://github.com/mattgwriter7" target="_blank">github.com/mattgwriter7</a><span class="material-icons">&#xe89e;</span></nobr><br />
+				</div>
+				<div class="linked">
+					<h3>LinkedIn</h3>
+					<nobr class="offsite_icon"><a href="https://www.linkedin.com/in/matt-garvin-b24938/" target="_blank">linkedin.com/in/matt-g...</a><span class="material-icons">&#xe89e;</span></nobr><br />
+				</div>			
+				<div class="twitter">
+					<h3>Twitter</h3>
+					<nobr class="offsite_icon"><a href="https://twitter.com/mattgarvin" target="_blank">twitter.com/mattgarvin</a><span class="material-icons">&#xe89e;</span></nobr><br />
+				</div>														
 			</div>				
 
-			<div class="contact">
-				<nobr><span class="material-icons mail">&#xe158;</span>matt.garvin.***@gmail.com</nobr> 
+			<div class="contact_box">
+
+				<span class="note">~ Please reach out! ~</span><br />	
+				<nobr><span class="material-icons mail">&#xe158;</span>matt.garvin.***@gmail.com</nobr><br /> 
 				<nobr><span class="material-icons phone">&#xe0b0;</span>***-556-9393</nobr>
 			</div>
 			
