added more panels

--- a/FONTS.htm
+++ b/FONTS.htm
@@ -48,6 +48,15 @@
 						<li>&lt;b class="m"&gt; = <b class="m">Monospaced</b></li>
 					</ul>			
 
+					<p class="note">NOTE: A &lt;b&gt; on its own will bold, but
+						when you add one of the shortcut classes above, it is not
+						bolded. (Go figure!)
+					</p>
+					
+					<h3>Notes and Other Effects</h3>
+					<p>You can do a "hint" or "note" with class="note", 
+						like this:</p>
+					
 					<p class="note">NOTE: This "note" text is done using...
 							class="note" on a &lt;p&gt; tag! (Go figure!)
 					</p>	
