--- a/LAYOUT.htm
+++ b/LAYOUT.htm
@@ -2,6 +2,22 @@
 				
 					<h1>LAYOUT</h1>
 
-					<p>This panel is hardly started...</p>	
+<pre class="mono">
+This panel is in rough form still...
+(these are notes in a "pre" tag)
+
+LAYOUT:
+* 1 break point
+	+ 2 views: desktop and mobile
+* sections are 1200px wide
+	+ on mobile 100%
+	
+* header
+* main (the white "page")
+* footer
+
+* in the future, a "hero" before
+	the main
+</pre>
 			
 				</div><!-- end:interior -->
