added TAGS panel

--- a/ASIDES.htm
+++ b/ASIDES.htm
@@ -2,7 +2,7 @@
 				
 					<h1>ASIDES</h1>
 
-					<p>"Asides" are boxes take up about half of the width of
+					<p>"Asides" are boxes that take up about half of the width of
 						a page on desktop, so they appear inset, 
 						while on mobile they are full-width.
 					</p>
