added LITTLE TOUCHES, plus link to demo

--- a/HEADERS.htm
+++ b/HEADERS.htm
@@ -3,7 +3,7 @@
 					<h1 class="short">HEADERS</h1>
 					<h2 class="tall">(Plus Heros and Footers)</h2>
 
-<pre class="mono">
+<pre>
 This panel is in rough form still...
 (these are notes in a "pre" tag)
 
