--- a/TAGS.htm
+++ b/TAGS.htm
@@ -1,6 +1,6 @@
 				<div class="interior">
 				
-					<h1>TAGS</h1>
+					<h1>TOUCHES</h1>
 
 					<p>"Tags" are just little text snippets 
 						that are contained by a colored box, like
