--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en-US" dir="ltr">
 <head>
-<title>COMPONENTS 1M</title>
+<title>COMPONENTS 1N</title>
 <meta name="Keywords" content="">
 <meta name="Description" content="">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
@@ -11,7 +11,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">			
-<link rel="stylesheet" type="text/css" href="./css/default.css?ver=1M">
+<link rel="stylesheet" type="text/css" href="./css/default.css?ver=1N">
+<link rel="stylesheet" type="text/css" href="./css/custom.css?ver=1N">
 <!-- CUSTOM CSS FOR THIS PAGE -->
 <style>
 		
@@ -23,6 +24,7 @@
 	<header>
 		<section>
 			<h1>COMPONENTS</h1>
+			<h3>A Whack of Boilerplate HTML/CSS</h3>
 		</section>	
 	</header>
 	
@@ -40,7 +42,7 @@
 				
 					<h1>INTRO</h1>
 
-					<p>This is how this works: This is a single
+					<p>This is a single
 						 page	website made up of a whack of 
 						 "<b class="o">COMPONENTS</b>".
 						 The goal is to have a repository with very clean 
@@ -65,6 +67,7 @@
 						<a href="#HEADERS">Headers</a>,
 						<a href="#HEADERS">Heros</a>,
 						<a href="#LAYOUT">Layout</a>,
+						<a href="#TOUCHES">Little Touches</a>
 						<a href="#STICKIES">Stickies</a>, 
 						<a href="#TAGS">Tags</a>
 					</p>
@@ -169,6 +172,20 @@
 			</div><!-- end:panel -->			
 			
 			
+
+			<a name="TOUCHES" /></a>
+			<div id="TOUCHES" class="panel">
+
+				<div class="closed">
+					Do you want to see the<br />
+					<b class="r big">LITTLE TOUCHES</b> write-up?<br />
+					<button class="show_me" data-panel="TOUCHES">show me!</button>
+				</div>	
+				
+			</div><!-- end:panel -->
+
+
+
 			
 		</section>		
 	</main>
@@ -224,10 +241,11 @@
 	//	make a JavaScript object called JS
 	//	( which gets used by default.js )
 	let JS = {}
-			JS.ver = '1M';
+			JS.ver = '1N';
 	</script>			
-	<script src="./js/default.js?ver=1M"></script>	
-	<!-- CUSTOM JS FOR THIS PAGE -->
+	<script src="./js/default.js?ver=1N"></script>
+	<script src="./js/custom.js?ver=1N"></script>	
+	<!-- CUSTOM ON-PAGE JS FOR THIS PAGE -->
 	<script>
 
 	</script>	
